--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
 clap = { version = "4.5.51", features = ["cargo", "derive"] }
 glob = "0.3.3"
 num_cpus = "1.17.0"
